Re-structured after API-changes.